# python-project-52

./: .gitignore  Makefile  README.md  flake8.cfg  pyproject.toml  setup.cfg
.github/workflows/: linter&tests.yml
task_manager/: settings.py  urls.py  views.py
task_manager/apps/labels/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/apps/statuses/: models.py  tests.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py  0002_status_name.py  0003_customstatus_delete_status.py  0004_rename_customstatus_status_alter_status_table.py
task_manager/apps/tasks/: filter.py  models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_labelfortask_task_labels.py
task_manager/apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_email.py  0004_alter_user_email_alter_user_username.py  0005_delete_user.py  0006_initial.py  0007_alter_user_password.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: auth.html  base.html  delete.html  index.html  labels_list.html  show_task.html  statuses_list.html  tasks_list.html  user_create.html  users_list.html
task_manager/templates/crud/: create&update.html
task_manager/utilities/: text.py
